<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="url_project_page" translatable="false">http://vcmi.eu</string>
    <string name="url_project_repo" translatable="false">http://github.com/vcmi/vcmi</string>
    <string name="url_launcher_repo" translatable="false">http://github.com/vcmi/vcmi-launcher</string>

    <string name="app_name">VCMI</string>
    <string name="server_name">VCMI Server</string>
    <string name="launcher_title">VCMI Launcher</string>
    <string name="launcher_btn_res_title">Change game native resolution</string>
    <string name="launcher_btn_res_subtitle_unknown">Currently: unknown (probably 800x600)</string>
    <string name="launcher_btn_res_subtitle">Currently: %1$dx%2$d</string>
    <string name="launcher_btn_start_title">Start VCMI</string>
    <string name="launcher_btn_start_subtitle">Current VCMI version: %1$s</string>
    <string name="launcher_btn_mods_title">Mods</string>
    <string name="launcher_btn_mods_subtitle">Currently not really functional</string>
    <string name="launcher_btn_cp_title">Codepage</string>
    <string name="launcher_btn_cp_subtitle_unknown">Currently: unknown</string>
    <string name="launcher_btn_cp_subtitle">Currently: %1$s</string>
    <string name="launcher_btn_pointermode_title">Change pointer mode</string>
    <string name="launcher_btn_pointermode_subtitle">Currently: %1$s</string>
    <string name="launcher_btn_pointermulti_title">Relative pointer speed multiplier</string>
    <string name="launcher_btn_pointermulti_subtitle">Currently: %1$s</string>
    <string name="launcher_btn_sound_title">Sound volume</string>
    <string name="launcher_btn_music_title">Music volume</string>
    <string name="launcher_btn_storage">Setup storage</string>
    <string name="launcher_btn_storage_description">Setup where to find VCMI data files</string>
    <string name="storage_description">VCMI needs original Heroes of Might and Magic 3 data to run properly. You need to install a licensed Heroes of Might and Magic 3 GOG edition on your PC, open it in file explorer and copy Data, Mp3, Maps folders to your Android device. Also you may want to add some VCMI addons with new towns and other nice features.</string>
    <string name="storage_description2">You have two options to provide this data to VCMI. Either use external storage where specific folder will be created by the game and you need to put the data there. Or use internal storage visible only to VCMI and import the data in form of compressed zip archive.</string>
    <string name="storage_btn_import_zip">Import VCMI files</string>
    <string name="storage_btn_import_zip_description">Import HOMM3 files, vcmi mods, saves and settings from a zip file to the internal storage</string>
    <string name="storage_btn_clear_internal">Clear internal storage</string>
    <string name="storage_btn_clear_internal_description">Delete HOMM3 data, mods, saves and settings from game internal storage</string>
    <string name="storage_btn_export_saves">Export saves to external storage</string>
    <string name="storage_btn_export_saves_description">Export saves to an external storage so that they are not lost. To include them back you can add them to vcmi</string>
    <string name="storage_btn_use_internal_storage">Use internal storage for VCMI files</string>
    <string name="storage_btn_use_internal_storage_description">Use app internal storage for VCMI files. Requires no extra permissions. Imported files are visible only to VCMI.</string>
    <string name="storage_btn_use_external_storage">Use external storage for VCMI files</string>
    <string name="storage_btn_use_external_storage_description">Use vcmi-data folder in external storage. Will ask storage permissions. May be slow on the latest android devices.</string>
    <string name="storage_btn_test_external_storage">Test external storage VCMI files</string>
    <string name="storage_btn_test_external_storage_description">vcmi-data folder should contain Data, Mp3, Maps folders copied from the original game.</string>
    <string name="launcher_version">Current launcher version: %1$s</string>
    <string name="launcher_error_vcmi_data_root_created">VCMI created folder \'%1$s\' (in %2$s). Place your H3 data files there (so that you have a folder %1$s/Data and %1$s/Mp3 etc) and restart the application.</string>
    <string name="launcher_error_vcmi_data_root_failed">Could not create VCMI data folder in %1$s.</string>
    <string name="launcher_error_h3_data_missing">Could not find data folder in \'%1$s\'. Place your H3 data files there (so that you have a folder %2$s/Data and %2$s/Mp3 etc) and restart the application.</string>
    <string name="launcher_error_vcmi_data_internal_missing">Could not find or extract vcmi data from app resources. Try to reinstall the app.</string>
    <string name="launcher_error_vcmi_data_internal_update">Could not update vcmi data from app resources. Try to reinstall the app.</string>
    <string name="launcher_error_permissions">This application needs write permissions to use the content stored in external storage</string>
    <string name="launcher_error_permission_broken">Could not resolve permissions correctly</string>
    <string name="launcher_error_config_saving_failed">Could not save vcmi config; reason: %1$s</string>
    <string name="launcher_error_setup_storage">VCMI data could not be found. Please setup storage.</string>
    <string name="mods_item_author_template">by %1$s</string>
    <string name="misc_try_again">Try again</string>
    <string name="launcher_section_init">Game init</string>
    <string name="launcher_section_settings">Settings</string>
    <string name="menu_mods_download_repo">Download repository data</string>

    <string name="misc_pointermode_normal">Normal</string>
    <string name="misc_pointermode_swipe">Normal with map swipe</string>
    <string name="misc_pointermode_relative">Relative</string>
    <string name="menu_launcher_about">About</string>

    <string name="mods_title">Detected mods</string>
    <string name="mods_failed_mod_loading">Could not load the mod in \'%1$s\' folder</string>

    <string name="about_title">About application</string>
    <string name="about_version_app">App version: %1$s</string>
    <string name="about_version_launcher">Launcher version: %1$s</string>
    <string name="about_section_project">Project</string>
    <string name="about_section_legal">Legal</string>
    <string name="about_links_main">Main page: %1$s</string>
    <string name="about_links_repo">Project repository: %1$s</string>
    <string name="about_links_repo_launcher">Launcher repository: %1$s</string>
    <string name="about_btn_authors">Authors</string>
    <string name="about_btn_libs">Third party libraries</string>
    <string name="about_btn_privacy">Privacy policy (TBD?)</string>
    <string name="about_error_opening_url">Could not open the webpage (no suitable application found)</string>

    <string name="dialog_authors_vcmi">VCMI authors</string>
    <string name="dialog_authors_launcher">Launcher authors</string>
</resources>
